crates/aven-parser/tests/fixtures/parser/valid/inline-match-arms.av
single = result ?> @Ok(x) => x
two = result ?> @Ok(v) => v, @Err(e) => fallback
nested = f((x ?> @Ok(v) => v, @Err(e) => 0), other)
