crates/aven-parser/tests/fixtures/parser/invalid/inline-match-arms.av
value = result ?> Ok(x) => x
